new proj/src/objects/GE_PRM_Commercial_Vetting__c.object
<CustomObject>
    <description>New PRM Process</description>
    <fields>
        <fullName>GE_PRM_Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Commercial_Vetting_Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Approved_Date__c</fullName>
        <label>Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Approver1_Approved_Date__c</fullName>
        <label>Approver1 Approved Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Approver_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>GE_PRM_Commercial_Vetting</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Approver_2_Approved_Date__c</fullName>
        <label>Approver 2 Approved Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GE_PRM_CV_Approved__c</fullName>
        <formula>GE_PRM_Approved_Date__c -  DATEVALUE(CreatedDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CV Approved</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_PRM_CV_Appvl_Cnt__c</fullName>
        <label>Commercial Vetting Approval Count</label>
        <summaryForeignKey>GE_PRM_Commercial_Vetting_Approval__c.GE_PRM_Commercial_Vetting_Application__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>GE_PRM_CV_Cycle_Time__c</fullName>
        <formula>GE_PRM_Approved_Date__c  -  DATEVALUE(CreatedDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CV Cycle Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_PRM_CV_Pending_Days__c</fullName>
        <description>Shows Pending Days in numbers</description>
        <formula>IF(ISPICKVAL(GE_PRM_Status__c, &apos;Approved&apos;) , (GE_PRM_Approved_Date__c - DATEVALUE(GE_PRM_Tollgate_Approvers_Generated__c)), (TODAY() - DATEVALUE(GE_PRM_Tollgate_Approvers_Generated__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Shows Pending Days in numbers</inlineHelpText>
        <label>CV Pending Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_PRM_CV_Submitted_Cycle__c</fullName>
        <formula>GE_PRM_Tollgate_Approvers_Generated__c - CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CV Submitted Cycle</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_PRM_CV_Submitted__c</fullName>
        <formula>GE_PRM_Tollgate_Approvers_Generated__c  -  CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CV Submitted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Commercial_Vetting_Need_More_Info__c</fullName>
        <label>Commercial Vetting Need More Info</label>
        <summaryFilterItems>
            <field>GE_PRM_Commercial_Vetting_Approval__c.GE_PRM_Status__c</field>
            <operation>equals</operation>
            <value>Need More Info, Additional Information Provided</value>
        </summaryFilterItems>
        <summaryForeignKey>GE_PRM_Commercial_Vetting_Approval__c.GE_PRM_Commercial_Vetting_Application__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Commercial_Vetting_Pending_Count__c</fullName>
        <label>Commercial Vetting Pending Count</label>
        <summaryFilterItems>
            <field>GE_PRM_Commercial_Vetting_Approval__c.GE_PRM_Status__c</field>
            <operation>equals</operation>
            <value>Pending</value>
        </summaryFilterItems>
        <summaryForeignKey>GE_PRM_Commercial_Vetting_Approval__c.GE_PRM_Commercial_Vetting_Application__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Commercial_Vetting_Rejected_Count__c</fullName>
        <label>Commercial Vetting Rejected Count</label>
        <summaryFilterItems>
            <field>GE_PRM_Commercial_Vetting_Approval__c.GE_PRM_Status__c</field>
            <operation>equals</operation>
            <value>Rejected</value>
        </summaryFilterItems>
        <summaryForeignKey>GE_PRM_Commercial_Vetting_Approval__c.GE_PRM_Commercial_Vetting_Application__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Competitive_Lines_Explain__c</fullName>
        <description>Please provide the name of competitor, product and type of relationship</description>
        <inlineHelpText>Please provide the name of competitor, product and type of relationship</inlineHelpText>
        <label>If yes?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Competitive_lines_or_services__c</fullName>
        <inlineHelpText>Is the Channel company working with competitors to existing GE products in the OG space?</inlineHelpText>
        <label>Competitive lines or services?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Complimentary_Lines__c</fullName>
        <description>What complimentary lines, if any, does the channel company carry?</description>
        <inlineHelpText>What complimentary lines, if any, does the channel company carry?</inlineHelpText>
        <label>Complimentary Lines</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Considered_other_partners__c</fullName>
        <label>Considered other channel partners?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Count_Approved_Approvals__c</fullName>
        <description>Counts total number Approved Approvals</description>
        <label>Count Approved Approvals</label>
        <summaryFilterItems>
            <field>GE_PRM_Commercial_Vetting_Approval__c.GE_PRM_Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </summaryFilterItems>
        <summaryForeignKey>GE_PRM_Commercial_Vetting_Approval__c.GE_PRM_Commercial_Vetting_Application__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Coverage_Overlap_Explain__c</fullName>
        <description>How will it be managed?</description>
        <inlineHelpText>How will it be managed?</inlineHelpText>
        <label>If yes?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Coverage_overlap__c</fullName>
        <inlineHelpText>Is there an overlap in coverage with an existing channel?</inlineHelpText>
        <label>Coverage overlap?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Expected_GE_Revenue__c</fullName>
        <inlineHelpText>Expected annual GE revenue from Channel company once up and running?</inlineHelpText>
        <label>Expected GE Revenue?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GE_PRM_General_Info_Completed_flag__c</fullName>
        <description>To Check &apos;General Information&apos; section mandatory fields are filled or not</description>
        <formula>IF(
OR
(
ISPICKVAL( GE_PRM_Competitive_lines_or_services__c , &apos;&apos;),
ISBLANK(GE_PRM_Time_in_business__c),
ISBLANK(GE_PRM_Reputation_of_channel__c),
ISBLANK(GE_PRM_Complimentary_Lines__c),
ISBLANK(GE_PRM_of_sales_people_selling_GE__c),
ISPICKVAL( GE_PRM_Other_GE_products__c , &apos;&apos;),
ISBLANK(GE_PRM_Total_revenue__c),
ISBLANK(GE_PRM_Expected_GE_Revenue__c)
),
IMAGE(&quot;/resource/1315699578000/RiskTopicSignalsOrange&quot;, &quot;Orange&quot;, 25,25),
IMAGE(&quot;/resource/1315699578000/RiskTopicSignalsGreen&quot;, &quot;Green&quot;, 25,25)
)</formula>
        <label>&lt;font color=&quot;white&quot;&gt;&lt;/font&gt;</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_I_Certify_above_information_true__c</fullName>
        <defaultValue>false</defaultValue>
        <description>I Certify the above information is true and correct field for Editable only by Channel manager.</description>
        <label>I Certify the above information is true</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Investment_required__c</fullName>
        <description>Is the Channel company willing to invest to fill any needs?</description>
        <inlineHelpText>Is the Channel company willing to invest to fill any needs?</inlineHelpText>
        <label>Investment required?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Master_Edit_CVA__c</fullName>
        <formula>IF(NOT(ISPICKVAL(GE_PRM_Status__c,&apos;Approved&apos;)),IF( CONTAINS($Api.Enterprise_Server_URL_260,&quot;communities&quot;), HYPERLINK(&quot;/channelpartner/&quot;+Id+&quot;/e?retURL=%2F&quot;+Id+&quot;&amp;RecordType=012K00000000dzx&quot;, IMAGE(&apos;/resource/1393276881000/Edit_AFA&apos;,&quot;Click to Edit&quot;),&quot;_parent&quot;),HYPERLINK(&quot;/&quot;+Id+&quot;/e?retURL=%2F&quot;+Id+&quot;&amp;RecordType=012K00000000dzx&quot;, IMAGE(&apos;/resource/1389644712000/Edit_AFA&apos;,&quot;Click to Edit&quot;),&quot;_parent&quot;)),IMAGE(&apos;/resource/1393276881000/Edit_AFA&apos;,&quot;Master Edit Feezed&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>&lt;font color=&quot;white&quot;&gt;me&lt;/font&gt;</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Other_Channels_Explian__c</fullName>
        <description>Why can’t they cover this product(s)?</description>
        <inlineHelpText>Why can’t they cover this product(s)?</inlineHelpText>
        <label>If yes?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Other_GE_products__c</fullName>
        <inlineHelpText>Do they represent any other GE products?</inlineHelpText>
        <label>Other GE products?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Other_channels_considered__c</fullName>
        <inlineHelpText>Have other OG channels in this territory been considered?</inlineHelpText>
        <label>Other channels considered?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Parent_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Commercial Vetting</label>
        <referenceTo>GE_PRM_Commercial_Vetting__c</referenceTo>
        <relationshipLabel>Commercial Vetting</relationshipLabel>
        <relationshipName>Commercial_Vetting</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Pndg_RFA_Cnt__c</fullName>
        <defaultValue>0</defaultValue>
        <description>To store Pending RFA Count</description>
        <label>Pending RFA Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Reasons_for_recommendation__c</fullName>
        <description>Why are you recommending we hire this channel?</description>
        <inlineHelpText>Why are you recommending we hire this channel?</inlineHelpText>
        <label>Reasons for recommendation?</label>
        <picklist>
            <picklistValues>
                <fullName>Replacement of another channel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Increased geographic coverage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Increased market segment coverage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Additional product coverage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Additional service coverage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local representation required by law</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Replacement for direct selling resource</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Reasons_for_relationship__c</fullName>
        <inlineHelpText>Are you looking for a long term relationship with the channel partner or overcoming a short term headcount restriction?</inlineHelpText>
        <label>Reasons for relationship?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Reputation_of_channel__c</fullName>
        <description>Describe the reputation of this channel in the market and why they are a better fit than others?</description>
        <inlineHelpText>Describe the reputation of this channel in the market and why they are a better fit than others?</inlineHelpText>
        <label>Reputation of channel?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>In Process</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need More Info</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Abandoned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Additional Info Provided</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Strategy_Section_Completed_Flag__c</fullName>
        <description>To check &apos;Strategy&apos; section mandatory fields are filled or not</description>
        <formula>IF(
OR
(
ISBLANK( GE_PRM_Reasons_for_recommendation__c),
ISBLANK(GE_PRM_Reasons_for_relationship__c),
ISPICKVAL(GE_PRM_Coverage_overlap__c,&apos;&apos;),
ISPICKVAL( GE_PRM_Other_channels_considered__c ,&apos;&apos;),
ISPICKVAL( GE_PRM_Investment_required__c , &apos;&apos;),
ISBLANK(GE_PRM_of_sales_with_GE_products__c)
),
IMAGE(&quot;/resource/1315699578000/RiskTopicSignalsOrange&quot;, &quot;Orange&quot;, 25,25),
IMAGE(&quot;/resource/1315699578000/RiskTopicSignalsGreen&quot;, &quot;Green&quot;, 25,25)
)</formula>
        <label>&lt;font color=&quot;white&quot;&gt;&lt;/font&gt;</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Tier_1__c</fullName>
        <defaultValue>&quot;Oil &amp; Gas (O&amp;G)&quot;</defaultValue>
        <label>Tier 1 P&amp;L</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Tier_2__c</fullName>
        <label>Tier 2 P&amp;L</label>
        <picklist>
            <picklistValues>
                <fullName>Drilling &amp; Surface (D&amp;S)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DTS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Services (GS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lufkin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Measurement &amp; Control (M&amp;C)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PII Pipeline Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subsea (SS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Turbo Machinery</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Tier_3__c</fullName>
        <label>Tier 3 P&amp;L</label>
        <picklist>
            <picklistValues>
                <fullName>Advanced Sensors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Artificial Lift (AL)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bently Nevada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blower &amp; Comp.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Control Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DOS-Installation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DOS-New Units</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DOS - Opex Core</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DOS - Opex CS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DOS - Service Multi P&amp;Ls</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DOS - Upgrades</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Downhole Technology (DT)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drilling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flow &amp; Process Technologies (Dresser)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Line Inspection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inspection Technologies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integrity Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Logging Service (LS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Measurement Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Units</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Offshore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oilfield</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opex - Core</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opex - CS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Power Transmission</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pressure Control (PC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reuter Stokes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salof</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Time_in_business__c</fullName>
        <description>How long has the channel company been in business?</description>
        <inlineHelpText>How long has the channel company been in business?</inlineHelpText>
        <label>Time in business?(years)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Tollgate_Appr_Section_Cmplt_flag__c</fullName>
        <description>To Check &apos;Tollgate Approver&apos; section mandatory fields are filled or not</description>
        <formula>IF(
(
IF(GE_PRM_I_Certify_above_information_true__c,FALSE,TRUE)
),
IMAGE(&quot;/resource/1315699578000/RiskTopicSignalsOrange&quot;, &quot;Orange&quot;, 25,25),
IMAGE(&quot;/resource/1315699578000/RiskTopicSignalsGreen&quot;, &quot;Green&quot;, 25,25)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>&lt;font color=&quot;white&quot;&gt;&lt;/font&gt;</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Tollgate_Approvers_Generated__c</fullName>
        <label>Tollgate Approvers Generated</label>
        <summarizedField>GE_PRM_Commercial_Vetting_Approval__c.CreatedDate</summarizedField>
        <summaryForeignKey>GE_PRM_Commercial_Vetting_Approval__c.GE_PRM_Commercial_Vetting_Application__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Tollgate_Generated__c</fullName>
        <formula>GE_PRM_CV_Appvl_Cnt__c &gt; 0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tollgate Generated?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Total_revenue__c</fullName>
        <inlineHelpText>What is the current total revenue of the channel (both GE and Non-GE products/services)?</inlineHelpText>
        <label>Total revenue?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Type__c</fullName>
        <defaultValue>&quot;New&quot;</defaultValue>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_fits_with_mkt_strat__c</fullName>
        <label>AFA fits with the Mkt Covg Strategy?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PRM_of_sales_people_selling_GE__c</fullName>
        <inlineHelpText>How many employees do they have that will be supporting sales of GE products?</inlineHelpText>
        <label># of sales people selling GE?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_PRM_of_sales_with_GE_products__c</fullName>
        <inlineHelpText>What percentage of total Channel sales will be GE products or services</inlineHelpText>
        <label>% of sales with GE products?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>GE_PRM_other_GE_products_explain__c</fullName>
        <description>Which products and how long?</description>
        <inlineHelpText>Which products and how long?</inlineHelpText>
        <label>If yes?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_PRM_working_with_competitors__c</fullName>
        <label>Channel company working with competitors</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>of_total_ChanAnel_sales_will_be_of_GE__c</fullName>
        <label>What % of Channel sales will be GE biz?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <label>Commercial Vetting</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>GE_PRM_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CV-{000000}</displayFormat>
        <label>CV Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Commercial Vetting</pluralLabel>
    <recordTypes>
        <fullName>GE_PRM_Commercial_Approved_Rejected</fullName>
        <active>true</active>
        <label>Commercial Vetting Approved/Rejected</label>
    </recordTypes>
    <recordTypes>
        <fullName>GE_PRM_Commercial_Vetting_Abandoned</fullName>
        <active>true</active>
        <label>Commercial Vetting Abandoned</label>
    </recordTypes>
    <recordTypes>
        <fullName>GE_PRM_Commercial_Vetting_In_Progress</fullName>
        <active>true</active>
        <label>Commercial Vetting In Progress</label>
    </recordTypes>
    <recordTypes>
        <fullName>GE_PRM_Commercial_Vetting_Need_more_info</fullName>
        <active>true</active>
        <label>Commercial Vetting Need more info</label>
    </recordTypes>
    <recordTypes>
        <fullName>GE_PRM_Commercial_Vetting_Submitted</fullName>
        <active>true</active>
        <label>Commercial Vetting Submitted</label>
    </recordTypes>
    <recordTypes>
        <fullName>Msater_Edit</fullName>
        <active>true</active>
        <description>Master Edit</description>
        <label>Msater Edit</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Competitive_lines_services_Expl_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL( GE_PRM_Competitive_lines_or_services__c , &apos;Yes&apos;),  ISBLANK( GE_PRM_Competitive_Lines_Explain__c )  )</errorConditionFormula>
        <errorDisplayField>GE_PRM_Competitive_Lines_Explain__c</errorDisplayField>
        <errorMessage>Please provide Competitive lines or services.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Coverage_overlap_Explanation_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(  ISPICKVAL(GE_PRM_Coverage_overlap__c,&apos;Yes&apos;),  ISBLANK( GE_PRM_Coverage_Overlap_Explain__c )  )</errorConditionFormula>
        <errorDisplayField>GE_PRM_Coverage_Overlap_Explain__c</errorDisplayField>
        <errorMessage>Please provide Coverage Overlap.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GE_PRM_Competitive_lines_or_services_Req</fullName>
        <active>true</active>
        <description>When Channel manager selects  &quot;I Certify the above information is true and correct&quot; and Competitive lines or services is Empty.</description>
        <errorConditionFormula>AND($RecordType.DeveloperName = &apos;GE_PRM_Commercial_Vetting_In_Progress&apos;, GE_PRM_I_Certify_above_information_true__c,
ISPICKVAL( GE_PRM_Competitive_lines_or_services__c , &apos;&apos; ) 
)</errorConditionFormula>
        <errorDisplayField>GE_PRM_Competitive_lines_or_services__c</errorDisplayField>
        <errorMessage>Please Provide the Competitive lines or services?</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GE_PRM_Complimentary_Lines_Req</fullName>
        <active>true</active>
        <description>When Channel manager selects  &quot;I Certify the above information is true and correct&quot; and Complimentary Lines is Empty.</description>
        <errorConditionFormula>AND($RecordType.DeveloperName = &apos;GE_PRM_Commercial_Vetting_In_Progress&apos;, GE_PRM_I_Certify_above_information_true__c,
ISBLANK( GE_PRM_Complimentary_Lines__c ) 
)</errorConditionFormula>
        <errorDisplayField>GE_PRM_Complimentary_Lines__c</errorDisplayField>
        <errorMessage>Please Provide the Complimentary Lines?</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GE_PRM_Coverage_overlap_Req</fullName>
        <active>true</active>
        <description>When Channel manager selects  &quot;I Certify the above information is true and correct&quot; and Coverage overlap is Empty.</description>
        <errorConditionFormula>AND($RecordType.DeveloperName = &apos;GE_PRM_Commercial_Vetting_In_Progress&apos;, GE_PRM_I_Certify_above_information_true__c,
 ISPICKVAL( GE_PRM_Coverage_overlap__c, &apos;&apos;) 
)</errorConditionFormula>
        <errorDisplayField>GE_PRM_Coverage_overlap__c</errorDisplayField>
        <errorMessage>Please Provide the Coverage overlap?</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GE_PRM_Expected_GE_Revenue_Req</fullName>
        <active>true</active>
        <description>When Channel manager selects  &quot;I Certify the above information is true and correct&quot; and Expected GE Revenue is Empty.</description>
        <errorConditionFormula>AND($RecordType.DeveloperName = &apos;GE_PRM_Commercial_Vetting_In_Progress&apos;, GE_PRM_I_Certify_above_information_true__c,
ISBLANK( GE_PRM_Expected_GE_Revenue__c ) 
)</errorConditionFormula>
        <errorDisplayField>GE_PRM_Expected_GE_Revenue__c</errorDisplayField>
        <errorMessage>Please Provide the Expected GE Revenue?</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GE_PRM_Investment_required_Req</fullName>
        <active>true</active>
        <description>When Channel manager selects  &quot;I Certify the above information is true and correct&quot; and Investment required is Empty.</description>
        <errorConditionFormula>AND($RecordType.DeveloperName = &apos;GE_PRM_Commercial_Vetting_In_Progress&apos;, GE_PRM_I_Certify_above_information_true__c,
ISPICKVAL( GE_PRM_Investment_required__c , &apos;&apos;) 
)</errorConditionFormula>
        <errorDisplayField>GE_PRM_Investment_required__c</errorDisplayField>
        <errorMessage>Please Provide the Investment required?</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GE_PRM_Other_GE_products_Req</fullName>
        <active>true</active>
        <description>When Channel manager selects  &quot;I Certify the above information is true and correct&quot; and Other GE products is Empty.</description>
        <errorConditionFormula>AND($RecordType.DeveloperName = &apos;GE_PRM_Commercial_Vetting_In_Progress&apos;, GE_PRM_I_Certify_above_information_true__c,
ISPICKVAL( GE_PRM_Other_GE_products__c, &apos;&apos; ) 
)</errorConditionFormula>
        <errorDisplayField>GE_PRM_Other_GE_products__c</errorDisplayField>
        <errorMessage>Please Provide the Other GE products?</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GE_PRM_Other_channels_considered_Req</fullName>
        <active>true</active>
        <description>When Channel manager selects  &quot;I Certify the above information is true and correct&quot; and Other channels considered is Empty.</description>
        <errorConditionFormula>AND($RecordType.DeveloperName = &apos;GE_PRM_Commercial_Vetting_In_Progress&apos;, GE_PRM_I_Certify_above_information_true__c,
 ISPICKVAL( GE_PRM_Other_channels_considered__c , &apos;&apos;) 
)</errorConditionFormula>
        <errorDisplayField>GE_PRM_Other_channels_considered__c</errorDisplayField>
        <errorMessage>Please Provide the Other channels considered?</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GE_PRM_Reasons_for_recommendation_Req</fullName>
        <active>true</active>
        <description>When Channel manager selects  &quot;I Certify the above information is true and correct&quot; and Reasons for recommendation is Empty.</description>
        <errorConditionFormula>AND($RecordType.DeveloperName = &apos;GE_PRM_Commercial_Vetting_In_Progress&apos;, GE_PRM_I_Certify_above_information_true__c,
ISBLANK( GE_PRM_Reasons_for_recommendation__c )  
)</errorConditionFormula>
        <errorDisplayField>GE_PRM_Reasons_for_recommendation__c</errorDisplayField>
        <errorMessage>Please Provide the Reasons for recommendation?</errorMessage>
    </validationRules>
</CustomObject>